Mon Apr  9 17:59:43 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/BuiltInTopicTest/monitor.cpp:
        * tests/DCPS/BuiltInTopicTest/publisher.cpp:

          Corrected #includes needed for static builds.  These were not picked
          up by the script that changed all of the others last week.

        * tests/DCPS/Monitor/Messenger.mpc:

          Fixed broken references to the monitoring library, caused by
          this mpc file directly listing the project in 'libs' and 'after'
          instead of using the provided mpb file.

Fri Apr  6 13:11:11 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Cleanup of script.

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.cpp:
        * dds/DCPS/transport/framework/TransportClient.cpp:

          Replaced DataLinkSetMap with the std::map that it used to
          contain.

        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:

          Removed unused check_header(const DataSampleHeader&).

        * dds/DCPS/transport/framework/DataLinkSetMap.h:
        * dds/DCPS/transport/framework/DataLinkSetMap.cpp:

          Removed these files.

Thu Apr  5 15:25:59 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Fixed variable name.

Thu Apr  5 13:54:18 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/UnitTests/UnitTests.mpc:

          Added needed dependencies for InfoRepoDiscovery.

Thu Apr  5 09:33:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/RTPS/RtpsInfo.cpp:
          Fixed argument not used warnings

Wed Apr  4 21:45:43 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Discovery.h: